--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="box">
         <div class="tela-roxa">
             <img src="img/logo kiston.png" alt="">
-            <h1>ÁREA DO CLIENTE</h1>
+            <h1>ÁREA </h1>
             <div class="botao-home">
                 <iconify-icon class="casa" icon="material-symbols:home-rounded"></iconify-icon>
             </div>
