Adicionado a estrutura da tela mobile

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Área Cliente</title>
 </head>
 <body>
+    <!--Tela Toda-->
     <div class="box">
         <div class="tela-roxa">
             <img src="img/logo kiston.png" alt="">
@@ -36,11 +37,26 @@
                 <button class="btn-desktop">ENTRAR</button>
                 <a href="#"><p>Esqueci a Senha</p></a>         
             </div>
+            <div class="mobile">
+                <div class="titulo">
+                    <img src="img/logo kiston preta.png" alt="logo kiston preta">
+                    <h1>ÁREA DO CLIENTE</h1>
+                </div>
+                <form action="#">
+                    <div class="input w50">
+                        <label for="CPF">CPF</label>
+                        <input type="text" placeholder="Digitar CPF" id="cpf2" required autocomplete="off" maxlength="14">
+                    </div>
+                    <div class="input">
+                        <label for="senha">SENHA</label>
+                        <input type="password" placeholder="Digitar Senha" required minlength="8" >
+                    </div>                   
+                </form>
+                <button class="btn-mobile">ENTRAR</button>
+                <a href="#"><p>Esqueci a Senha</p></a>
+            </div>
         </div>
-        <div class="teste">
-            <h1>sss</h1>
-        </div>
-    </div>  
+    </div>
 <script src="configuração/config.js"></script>       
 </body>
 </html>
